--- a/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
+++ b/src/app/dashboard/dashboard-teams-grid/dashboard-teams-grid.component.html
@@ -2,7 +2,7 @@
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
-                <h1>Interaction list By Team</h1>
+                <h1>Interaction Team-Wise</h1>
             </div>
         </div>
     </div>
