--- a/src/app/dashboard/interaction-list-by-source/interaction-list-by-source.component.html
+++ b/src/app/dashboard/interaction-list-by-source/interaction-list-by-source.component.html
@@ -2,7 +2,7 @@
     <div class="row align-items-center justify-content-between">
         <div class="col-md-auto col-sm-auto col">
             <div class="content-header">
-                <h1>Interaction list By Source</h1>
+                <h1>Interaction Source-Wise</h1>
             </div>
         </div>
     </div>
