--- a/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
+++ b/src/app/inventory/interaction-detail-view-dialog/interaction-detail-view-dialog.component.html
@@ -1,9 +1,27 @@
-<div class="dialogdiv p-5 text-center">Interaction number is :{{data?.transactionNumber}}</div>
-<mat-dialog-actions align="center">
-    <div class="col-md-12 mt-1" *hasClaim="'EMAIL_SEND_EMAIL'">
-      <button (click)="dialogRef.close(true)" type="button" class="btn btn-success">
-        <!-- <i class="fas fa-paper-plane"></i> -->
-        Done
-      </button>
+<mat-dialog-content>
+  
+  <div class="dialogdiv text-center">Interaction number is :{{data?.transactionNumber}}</div>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="form-group">
+        <mat-label> Disposition</mat-label>
+        <mat-select [(ngModel)]="selectedValue"
+            placeholder="Select Disposition" class="form-control">
+            <mat-option *ngFor="let status of statusList" [value]="status.id">
+                {{status.name}}
+            </mat-option>
+        </mat-select>
     </div>
-  </mat-dialog-actions>
+</div>
+</div>
+</mat-dialog-content>
+
+
+<mat-dialog-actions align="center">
+  <div class="col-md-12 mt-1">
+    <button (click)="submit()" type="button" class="btn btn-success">
+      <i class="fas fa-save"></i> Close Call
+    </button>
+  </div>
+</mat-dialog-actions>
