--- a/src/app/inventory/l0-email/l0-email.component.html
+++ b/src/app/inventory/l0-email/l0-email.component.html
@@ -171,7 +171,7 @@
                 <td class="table-column-350" mat-cell *matCellDef="let row"> {{row.subcategoryName}}
                 </td>
             </ng-container>
-            <ng-container matColumnDef="problemreported1">
+            <ng-container matColumnDef="problemreported">
                 <th class="table-column-200" mat-header-cell *matHeaderCellDef mat-sort-header> Problem Reported</th>
                 <td class="table-column-200" mat-cell *matCellDef="let row"> {{row.problemReported}}
                 </td>
