--- a/src/app/dashboard/dashboard-status-chart/dashboard-status-chart.component.html
+++ b/src/app/dashboard/dashboard-status-chart/dashboard-status-chart.component.html
@@ -28,7 +28,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6" *hasClaim="'DB_STATUSWISEGRAPH'">
         <div class="chartDiv1 statusCount text-center">
             <p> Status Wise Count </p>
             <canvas *ngIf="!isLoading && statusPieChartData" baseChart [data]="statusChartData" [labels]="statusChartLabels"
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-6" *hasClaim="'DB_SOURCEWISECOUNT'" >
         <div class="chartDiv1 sorceCount text-center">
             <p> Source Wise Count </p>
             <canvas *ngIf="!isLoading && sourcePieChartData.length" baseChart [data]="sourceChartData" [labels]="sourceChartLabels"
