--- a/src/app/email-outbox/email-outbox/email-outbox.component.html
+++ b/src/app/email-outbox/email-outbox/email-outbox.component.html
@@ -1,1 +1,34 @@
-<p>email-outbox works!</p>
+<div class="page-header-main">
+    <div class="row align-items-center justify-content-between">
+        <div class="col-md-auto col-sm-auto col">
+            <div class="content-header">
+                <h1>Email-Outbox</h1>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12" *ngFor="let data of outboxList"  >
+        <div class="d-flex emaildiv">
+            <div class="checkBox-section">
+                <mat-checkbox (change)="checkEnable($event)" color="primary" class="email-check">
+                </mat-checkbox>
+            </div>
+            <div class="mailNameSection overflowEllipsis">
+                <span>
+                    {{data?.mailFromName}}
+                </span>
+            </div>
+            <div class="mailMessageSection overflowEllipsis" routerLink="outbox-detail/{{data?.id}}" >
+                <span>
+                    {{data?.mailMessage}}
+                </span>
+            </div>
+
+            <div class="deleteIconDiv ml-4">
+                <mat-icon class="deleteIcon" (click)="deleteMail(data)" >delete</mat-icon>
+            </div>
+
+        </div>
+    </div>
+</div>
