--- a/src/app/inventory/survey-questions/survey-questions.component.html
+++ b/src/app/inventory/survey-questions/survey-questions.component.html
@@ -116,10 +116,10 @@
         <div class="col-md-12 my-3">
             <div class="form-row w-100">
                 <div class="col-md-auto col-auto">
-                    <button *hasClaim="'INT_ADD_INTERACTION'" class="btn btn-success btn-sm m-right-10" (click)="save()"
+                    <!-- <button *hasClaim="'INT_ADD_INTERACTION'" class="btn btn-success btn-sm m-right-10" (click)="save()"
                         cdkFocusInitial><i class="fas fa-save"></i>
                         {{"SAVE" | translate}}
-                    </button>
+                    </button> -->
                     <!-- <button class="btn btn-danger btn-sm" (click)="onCancel()">
                 <i class="fas fa-times-circle"></i>
                 {{"CANCEL" | translate}}
